# aggrigator_experiments

./: .gitignore  LICENSE  README.md  environment.yml  evaluate_correlation.py  example_notebook.ipynb  pyproject.toml  requirements.txt  test_aggr_sim.py  test_compat.py
configs/: ade20k_deeplab.yaml  ade20k_deeplabv3.yaml
datasets/: __init__.py  dataset.py  spatial_decomposition.py  store_spatial_weighted_maps.py  test.ipynb
datasets/ADE20K/: ade20k_loader.py
datasets/Arctique/: __init__.py  arctique_dataset_creation.py
datasets/GTA_CityScapes/: __init__.py  cityscapes_labels.py  gta_cityscapes_data_tutorial.ipynb  gta_cityscapes_dataset_creation.py  test_gta_cityscapes.ipynb
datasets/LIDC/: __init__.py  convert_to_standard.py  lidc_dataset_creation.py  lidc_visualization.ipynb  store_performance_metrics.py
datasets/Lizard/: __init__.py  lizard_dataset_creation.py
datasets/Weedsgalore/: weedsgalore_dataset_creation.py  weedsgalore_visualize.ipynb
datasets/datalaoders/: __init__.py  dataset.py
evaluation/: __init__.py  accuracy_metrics.py  accuracy_rejection.py  analyse_spatial_methods.py  analysis_helpers.py  constants.py  data_utils.py  ood_detection_auroc_aggregators.py  plot_auroc_correlation.py  plot_auroc_id_ood_aggregations.py  plot_corr_gt_softlabels_aggregations.py  plot_functions.py  plot_rank_correlation.py  uncertainty_utils.py
evaluation/configs/: ade20k_resnest.yaml
evaluation/metrics/: __init__.py  accuracy_metrics.py  auroc_ood.py  auroc_ood_detection.py  dice.py  ood_detection_auroc.py  selective_risk_coverage.py  test_dice.py
evaluation/scripts/: compute_uncertainty_error_dice.py  evaluate_aurc.py  evaluate_auroc.py  evaluate_correlation.py  evaluate_spatial_fingerprint.py  visualize_spatial_fingerprint.py
experiments/: ArctiqueUncertainty.ipynb  SpatialSimilarity.ipynb  UQ_Benchmarking.ipynb  UncertaintyCropSegmentation.ipynb  acc_rj.ipynb  first_aggregation_tests.ipynb  paper_figures.ipynb  pitfall_analysis.ipynb
output/: instance_auroc_ood_detect_results.csv  semantic_auroc_ood_detect_results.csv
spatial/: spatial.py
src/aggrigator/: datasets.py  (+8 more)
tables/: semantic_auroc_ood_detect_results.csv
tests/: test_ade20k_loader.py  test_aggr_sim.py  test_correlation.py  test_environment.py  test_methods.py  test_spatial_fingerprint.py  test_toolkit.py  test_util.py
(+81 files in other folders)
